@@ -2,6 +2,7 @@ wDesktop 0.6.1 (UNRELEASED)
  * Improve auto-expanding of chat rooms.
  * Parse the timestamp of chat room messages.
  * Close connection to chat server on exit.
+ * Make it possible to set available/busy/offline status.
 
 wDesktop 0.6.0 (2010-02-12)
  * If we receive a subscribe request from someone in our list, accept it.
